Fix spacing to be consistent with other sections

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2900,7 +2900,7 @@
 
 	.demo-box {
 		width: 526px;
-		height: 600px;
+		height: 640px;
 	}
 
 	#demo div {
